# shishi

./: .clcopying  .cvscopying  .cvsignore  .cvsusers  .gitignore  .x-sc_GPL_version  .x-sc_bindtextdomain  .x-sc_cast_of_argument_to_free  .x-sc_program_name  .x-sc_prohibit_cvs_keyword  .x-sc_prohibit_empty_lines_at_EOF  .x-sc_prohibit_magic_number_exit  .x-sc_space_tab  .x-sc_texinfo_acronym  .x-sc_trailing_blank  .x-sc_two_space_separator_in_usage  .x-sc_unmarked_diagnostics  .x-sc_useless_cpp_parens  ANNOUNCE  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README-alpha  THANKS  autogen.sh  cfg.mk  configure.ac  gtk-doc.make  maint-cfg.mk  shisa.conf.in  shishi-gss.pc.in  shishi.conf.in  shishi.fms  shishi.pc.in  shishi.skel.in
asn1/: .cvsignore  ChangeLog  Makefile.am  README  configure.in
asn1/doc/: .cvsignore
asn1/lib/: .cvsignore  ASN1.c  coding.c  decoding.c  defines.h  element.c  int.h  parser_aux.c  structure.c
asn1/src/: .cvsignore  CertificateExample.c  asn1Coding.c  asn1Decoding.c  asn1Parser.c
asn1/tests/: .cvsignore  Test_parser.c  Test_tree.c
build-aux/: .cvsignore
crypto/: .cvsignore  Makefile.am  README.shishi  aes.h  cbc-cts.c  cbc-cts.h  cbc-mac.c  cbc-mac.h  cbc.h  configure.ac  des.h  desCode.h  hmac-md4.c  hmac.h  md4-meta.c  md4.c  md4.h  md5.h  memxor.h  nettle-internal.h  nettle-meta.h  sha.h
crypto/cipher/: .cvsignore  Makefile.am  md.c
crypto/doc/: .cvsignore  gcrypt.texi
crypto/mpi/: .cvsignore
crypto/scripts/: .cvsignore
crypto/src/: .cvsignore  sexp.c
crypto/tests/: .cvsignore  Makefile.am
db/: .cvsignore  Makefile.am  cfg.c  config.c  core.c  db.c  err.c  error.c  file.c  file.h  fileutil.c  fileutil.h  info.h  init.c  internal.h  libshisa.map  setup.c  shisa.h  shishi-db.h
db/gl/: Makefile.am  gnulib.mk
db/gl/m4/: gnulib-cache.m4  gnulib-comp.m4
doc/: .cvsignore  Makefile.am  announce.txt  ccache.txt  components.dia  gdoc  gdoc-error  gendocs.sh  gendocs_template  gpl.texi  keytab.txt  parse-datetime.texi  shishi.texi
doc/cyclo/: Makefile.am
doc/man/: .cvsignore  Makefile.am
doc/reference/: .cvsignore  Makefile.am  shishi-docs.sgml  shishi-docs.tmpl
doc/reference/tmpl/: .cvsignore  shishi.sgml
doc/specifications/: arith.int.html  draft-hartmans-krb-wg-preauth-fw-xx.txt  draft-ietf-cat-kerberos-revisions-11.txt  draft-ietf-johansson-krb-model-00.txt  draft-ietf-kitten-gssapi-domain-based-names-02.txt  draft-ietf-krb-wg-gssapi-cfx-00.txt  draft-ietf-krb-wg-kerberos-set-passwd-01.txt  draft-ietf-krb-wg-pkinit-alg-agility-02.txt  draft-johansson-kerberos-model-00.txt  draft-josefsson-kerberos5-starttls-00.txt  draft-raeburn-krb-rijndael-krb-02-D.txt  draft-raeburn-krb-rijndael-krb-06rc.txt  draft-zhu-pku2u-01.txt  iv.txt  kcrypto.txt  krb5-kdc.schema  krbkey00.txt  rfc26.0.txt  typos-rfc1510.txt
errcrypto/: .cvsignore
errcrypto/po/: .cvsignore
errcrypto/src/: .cvsignore
errcrypto/tests/: .cvsignore
examples/: .cvsignore  Makefile.am  client-cksum.c  client-priv.c  client-safe.c  client.c  server.c
extra/: Makefile.am  README  fetchmail.diff  fetchmail.mail  inetutils.diff  mailutils.diff
extra/inetutils/: .cvsignore  Makefile.am  README  configure.ac
extra/inetutils/headers/: Makefile.am
extra/inetutils/ifconfig/: ifconfig.h
extra/inetutils/libinetutils/: Makefile.am  daemon.c  logwtmp.c  ttymsg.c  utmp_init.c  xmalloc.c
extra/inetutils/libtelnet/: Makefile.am  auth-proto.h  auth.c  auth.h  kerberos5.c  shishi.c
extra/inetutils/logger/: .cvsignore
extra/inetutils/telnetd/: .cvsignore  Makefile.am  pty.c  shishi-telnetd.8
extra/pam_shishi/: .cvsignore  Makefile.am  pam_shishi.c  test.c
extra/rsh-redone/: .cvsignore  Makefile  Makefile.am  rcp.c  rlogin.1  rlogin.c  rlogind.c  rsh.1  rsh.c  rshd.c
gdbm/: .cvsignore  Makefile.in  gdbm.info
gl/: .cvsignore  Makefile.am  README  arcfour.c  arcfour.h  argp-help.c  argp-namefrob.h  argp-parse.c  argp-xinl.c  argp.h  arpa_inet.in.h  b64.c  base64.c  base64.h  close-hook.c  des.c  des.h  fseeko.c  gc-gnulib.c  gc-libgcrypt.c  gc-pbkdf2-sha1.c  gc-pbkdf2.c  gc.h  getaddrinfo.c  getaddrinfo.h  getdate.y  getdelim.c  getdomainname.c  getdomainname.h  getpass.c  getsubopt.c  getsubopt.h  gettext.h  hmac-md5.c  hmac-sha1.c  hmac.c  hmac.h  inet_ntop.c  inet_r.c  inet_r.h  (+51 more)
gl/m4/: .cvsignore  Makefile.am  argp.m4  getaddrinfo.m4  getdate.m4  getdomainname.m4  gnulib-cache.m4  gnulib-comp.m4  gnulib.m4  memdup.m4  strdup.m4  strfile.m4  strnlen.m4  timegm.m4  valgrind-tests.m4  xmemdup.m4
gl/override/doc/: gendocs_template  gendocs_template.diff
gl/override/lib/: gettext.h.diff
gl/override/m4/: valgrind-tests.m4.diff
gl/tests/: Makefile.am
gss/: .cvsignore  Makefile.am  context.c  cred.c  gssapi.h  internal.h  misc.c  msg.c  name.c  obsolete.c  oid.c
lib/: .cvsignore  Makefile.am  ap.c  aprep.c  apreq.c  as.c  asn1.c  asn1.h  authenticator.c  authorize.c  base64.c  ccache.c  ccache.h  cfg.c  cfg.h  crypto-3des.c  crypto-aes.c  crypto-ctx.c  crypto-des.c  crypto-lowlevel.c  crypto-md.c  crypto-null.c  crypto-rc4.c  crypto-simplified.c  crypto-utils.c  crypto.c  crypto.h  diskio.c  diskio.h  done.c  encapreppart.c  enckdcreppart.c  encticketpart.c  error.c  gztime.c  hostkeys.c  init.c  internal.h  kdc.c  kdcrep.c  (+43 more)
m4/: .cvsignore  Makefile.am
po/: .cvsignore  LINGUAS  Makevars  POTFILES.in  de.po.in  fi.po.in  fr.po.in  pl.po  pl.po.in  shishi.pot  sr.po.in  sv.po  vi.po  vi.po.in
src/: .cvsignore  Makefile.am  authp.c  ccache2shishi.c  ccache2shishi.ggo  client-cksum.c  client.c  crypto.c  data.h  foo.c  kdc.c  kdc.h  keytab2shishi.c  keytab2shishi.ggo  list.c  resume.c  server.c  shisa.c  shisa.ggo  shishi.c  shishi.ggo  shishid.c  shishid.ggo  starttls.c
src/gl/: Makefile.am  gnulib.mk
src/gl/m4/: gnulib-cache.m4  gnulib-comp.m4
tests/: .cvsignore  Makefile.am  authenticator.c  ccache.c  check_docbook.sh  crypto-ctx.c  crypto.c  gdoc-warn.c  gss.c  gztime.c  key.c  keytab.c  low-crypto.c  multiname.c  nonce.c  passwdpromptcb.c  priv.c  rijndael.c  safe.c  shisa.sh  shishi.supp  ticketset.c  utils.c  utils.h
(+8 files in other folders)
